--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "css-loader": "^5.1.3",
+    "jspdf": "^2.5.0",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
     "vuetify": "^2.5.10",
