--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "core-js": "^3.6.5",
     "css-loader": "^5.1.3",
     "jspdf": "^2.5.0",
+    "jspdf-autotable": "^3.5.23",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
     "vuetify": "^2.5.10",
